chore: clear outputs

--- a/docs/source/notebooks/pxp_model.ipynb
+++ b/docs/source/notebooks/pxp_model.ipynb
@@ -530,6 +530,215 @@
     "collapsed": false
    },
    "id": "ff7241d674e6adcf"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from scipy.linalg import eig\n",
+    "\n",
+    "n = 6\n",
+    "A = np.random.random((n, n))\n",
+    "A = (A + A.T) / 2\n",
+    "B = np.random.random((n, n))\n",
+    "B = (B + B.T) / 2"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-19T08:48:20.673867Z",
+     "start_time": "2024-01-19T08:48:20.626691Z"
+    }
+   },
+   "id": "66232535e1ad75ae",
+   "execution_count": 71
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([ 5.17861996,  3.50654424,  1.64330574, -3.6190189 , -1.10955797,\n       -2.02348605])"
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "evals, left_evecs, right_evecs = eig((B @ B @ A + B), b=B @ B, left=True, right=True)\n",
+    "np.real_if_close(evals)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-19T08:49:37.842465Z",
+     "start_time": "2024-01-19T08:49:37.820498Z"
+    }
+   },
+   "id": "c17770b4e49fb870",
+   "execution_count": 81
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([[-0.01313412,  0.25280183, -0.11429452,  0.0355074 , -0.1389902 ,\n        -0.13156532],\n       [ 0.01726332,  0.20667643,  0.04641633, -0.01117205, -0.05333428,\n        -0.26929128],\n       [ 0.0009874 ,  0.33072233, -0.07521903, -0.01727135,  0.32635841,\n         0.03221529],\n       [ 0.01066535,  0.26655691, -0.04949916, -0.01921836, -0.22867519,\n         0.21713454],\n       [-0.01773578,  0.21525124,  0.10754941, -0.0449608 , -0.06391188,\n        -0.02362612],\n       [ 0.00155741,  0.25720879,  0.13304954,  0.05382918,  0.05030143,\n         0.09901932]])"
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "B.T @ B.T @ left_evecs"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-19T08:49:40.729514Z",
+     "start_time": "2024-01-19T08:49:40.721052Z"
+    }
+   },
+   "id": "ff4e0daf1732d2e9",
+   "execution_count": 82
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([[-0.43726119,  0.39994321, -0.49837224,  0.42523715, -0.32091572,\n        -0.34155477],\n       [ 0.5747306 ,  0.32697088,  0.20239476, -0.13379667, -0.12314401,\n        -0.6991031 ],\n       [ 0.03287253,  0.52321674, -0.32798664, -0.20684189,  0.75353185,\n         0.08363363],\n       [ 0.35507093,  0.42170434, -0.21583718, -0.2301594 , -0.52799019,\n         0.56369975],\n       [-0.59046004,  0.34053659,  0.46896075, -0.53845113, -0.14756671,\n        -0.06133542],\n       [ 0.05184941,  0.40691522,  0.58015202,  0.64465904,  0.11614142,\n         0.25706258]])"
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "right_evecs"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-19T08:49:42.104799Z",
+     "start_time": "2024-01-19T08:49:42.084013Z"
+    }
+   },
+   "id": "9ed4e14591d261c9",
+   "execution_count": 83
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([[ 3.00372306e-02, -5.44647380e-16,  1.09985652e-16,\n         1.14230456e-16,  1.51245417e-16,  1.46725081e-16],\n       [-9.03648633e-17,  6.32094308e-01,  1.59676350e-16,\n         1.70956973e-16, -1.36311277e-16, -1.27586592e-16],\n       [ 1.66217051e-16, -2.16197646e-15,  2.29335640e-01,\n        -1.78263618e-16,  3.86232693e-16,  4.03801479e-17],\n       [-4.23205871e-18, -1.80006851e-15, -4.97047294e-16,\n         8.35002369e-02, -2.68319393e-16,  1.23055369e-16],\n       [-4.26990823e-17, -3.69150228e-17,  9.93403663e-17,\n         4.39054939e-17,  4.33104994e-01, -6.10906921e-17],\n       [ 1.52234143e-16,  3.42037638e-16,  3.74279220e-16,\n         3.42983829e-17,  5.77632716e-16,  3.85195380e-01]])"
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.real_if_close(left_evecs.T @ B @ B @ right_evecs)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-19T08:49:43.354975Z",
+     "start_time": "2024-01-19T08:49:43.270338Z"
+    }
+   },
+   "id": "e402d1ccaad28fe7",
+   "execution_count": 84
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([ 5.17861996,  3.50654424,  1.64330574, -3.6190189 , -2.02348605,\n       -1.10955797])"
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "evals, left_evecs, right_evecs = eig(A + np.linalg.pinv(B), left=True, right=True)\n",
+    "np.real_if_close(evals)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-19T08:48:55.598666Z",
+     "start_time": "2024-01-19T08:48:55.531495Z"
+    }
+   },
+   "id": "b67fecc1435ae51a",
+   "execution_count": 77
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([[-0.43726119,  0.39994321,  0.49837224,  0.42523715,  0.34155477,\n         0.32091572],\n       [ 0.5747306 ,  0.32697088, -0.20239476, -0.13379667,  0.6991031 ,\n         0.12314401],\n       [ 0.03287253,  0.52321674,  0.32798664, -0.20684189, -0.08363363,\n        -0.75353185],\n       [ 0.35507093,  0.42170434,  0.21583718, -0.2301594 , -0.56369975,\n         0.52799019],\n       [-0.59046004,  0.34053659, -0.46896075, -0.53845113,  0.06133542,\n         0.14756671],\n       [ 0.05184941,  0.40691522, -0.58015202,  0.64465904, -0.25706258,\n        -0.11614142]])"
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "right_evecs"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-19T08:48:57.046861Z",
+     "start_time": "2024-01-19T08:48:57.018834Z"
+    }
+   },
+   "id": "62d5f54311c93f65",
+   "execution_count": 78
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array([[-0.43726119,  0.39994321,  0.49837224,  0.42523715,  0.34155477,\n         0.32091572],\n       [ 0.5747306 ,  0.32697088, -0.20239476, -0.13379667,  0.6991031 ,\n         0.12314401],\n       [ 0.03287253,  0.52321674,  0.32798664, -0.20684189, -0.08363363,\n        -0.75353185],\n       [ 0.35507093,  0.42170434,  0.21583718, -0.2301594 , -0.56369975,\n         0.52799019],\n       [-0.59046004,  0.34053659, -0.46896075, -0.53845113,  0.06133542,\n         0.14756671],\n       [ 0.05184941,  0.40691522, -0.58015202,  0.64465904, -0.25706258,\n        -0.11614142]])"
+     },
+     "execution_count": 79,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "left_evecs"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-01-19T08:48:58.793304Z",
+     "start_time": "2024-01-19T08:48:58.773103Z"
+    }
+   },
+   "id": "fc0373ae61f45636",
+   "execution_count": 79
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "7a8af94899d4d343"
   }
  ],
  "metadata": {
