--- a/docs/source/notebooks/scar_robustness.ipynb
+++ b/docs/source/notebooks/scar_robustness.ipynb
@@ -7,16 +7,14 @@
    "source": [
     "from IPython.display import clear_output\n",
     "from time import sleep\n",
-    "import json\n",
     "\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "from scipy.linalg import expm, null_space, solve\n",
+    "from scipy.linalg import null_space\n",
     "from scipy.sparse import csr_matrix\n",
-    "from scipy.sparse.linalg import expm_multiply, eigsh\n",
+    "from scipy.sparse.linalg import expm_multiply\n",
     "import matplotlib.pyplot as plt\n",
     "import networkx as nx\n",
-    "from networkx.algorithms.isomorphism import GraphMatcher\n",
     "import pyvis.network as nt\n",
     "import igraph\n",
     "\n",
@@ -421,7 +419,7 @@
    "source": [
     "coup_j, coup_rk = (1, -0.7)\n",
     "basis, model = setup_dimer_model(lattice_shape=(4, 4), n_solution=132, coup_j=coup_j, coup_rk=coup_rk)\n",
-    "evals, evecs = np.linalg.eigh(model.hamiltonian)"
+    "evals, evecs = np.linalg.eigh(model.hamiltonian.toarray())"
    ],
    "metadata": {
     "collapsed": false
@@ -530,7 +528,7 @@
     "    # [25, 67, 26, 68],\n",
     "    # [55, 37, 32, 7],\n",
     "    # [43, 21, 44, 22]\n",
-    "    np.where(np.abs(evecs[:, 78]) > 0.05)[0],  # type-I, <pot> = 4\n",
+    "    # np.where(np.abs(evecs[:, 78]) > 0.05)[0],  # type-I, <pot> = 4\n",
     "    # np.where(np.abs(evecs[:, 43]) > 0.15)[0],  # type-I, <pot> = 6\n",
     "    # np.where(np.diag(two_steps_mat) == 4)[0],\n",
     "    # np.where(np.diag(two_steps_mat) == 6)[0],\n",
@@ -2500,7 +2498,7 @@
    "source": [
     "coup_j, coup_rk = (1, -0.7)\n",
     "basis, model = setup_link_model(lattice_shape=(4, 4), n_solution=990, coup_j=coup_j, coup_rk=coup_rk)\n",
-    "evals, evecs = np.linalg.eigh(model.hamiltonian)"
+    "evals, evecs = np.linalg.eigh(model.hamiltonian.toarray())"
    ],
    "metadata": {
     "collapsed": false
@@ -2602,12 +2600,13 @@
     "color = [\"whitesmoke\" for i in range(ig.vcount())]\n",
     "highlight = [\n",
     "    np.where(np.diag(two_steps_mat) == 8)[0],\n",
-    "    np.where(np.diag(two_steps_mat) == 6)[0],\n",
+    "    # np.where(np.diag(two_steps_mat) == 6)[0],\n",
+    "    # [29, 41, 89, 110, 31, 91, 140, 100]\n",
     "]\n",
     "highlight_color = [\n",
     "    \"aqua\",\n",
     "    # \"deepskyblue\",\n",
-    "    \"yellowgreen\",\n",
+    "    # \"yellowgreen\",\n",
     "    # \"tomato\",\n",
     "    # \"royalblue\"\n",
     "]\n",
@@ -2615,9 +2614,10 @@
     "    for node in nodes:\n",
     "        color[node] = highlight_color[i]\n",
     "ig.vs[\"color\"] = color\n",
+    "sub_ig = ig.induced_subgraph(np.where((np.diag(two_steps_mat) == 8) | (np.diag(two_steps_mat) == 9) | (np.diag(two_steps_mat) == 10))[0])\n",
     "igraph.plot(\n",
-    "    ig,\n",
-    "    layout=ig.layout_kamada_kawai(),\n",
+    "    sub_ig,\n",
+    "    layout=sub_ig.layout_kamada_kawai(),\n",
     "    vertex_size=10,\n",
     "    # vertex_color=\"orange\",\n",
     "    edge_width=0.6,\n",
@@ -2629,6 +2629,18 @@
     "collapsed": false
    },
    "id": "afb5a077c7d50e29"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "nx.write_gexf(sub_ig.to_networkx(), \"data.gexf\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "8bccfa1ef9be34ca",
+   "execution_count": null
   },
   {
    "cell_type": "code",
@@ -2652,7 +2664,7 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "two_steps_mat = np.linalg.matrix_power(model.kinetic_term, 2)\n",
+    "two_steps_mat = np.linalg.matrix_power(model.kinetic_term.toarray(), 2)\n",
     "sort_idx = np.argsort(np.diag(two_steps_mat))\n",
     "\n",
     "plt.plot(np.diag(two_steps_mat[sort_idx, :][:, sort_idx]), linestyle=\"--\", marker=\"o\")\n",
@@ -2753,8 +2765,8 @@
     "    for node in nodes:\n",
     "        color[node] = highlight_color[i]\n",
     "ig.vs[\"color\"] = color\n",
-    "sub_ig = ig.induced_subgraph(np.where(np.diag(two_steps_mat) == 8)[0])\n",
-    "# sub_ig = ig.induced_subgraph(np.where(np.abs(evecs[:, 226]) > 0.05)[0])\n",
+    "# sub_ig = ig.induced_subgraph(np.where(np.diag(two_steps_mat) == 8)[0])\n",
+    "sub_ig = ig.induced_subgraph(np.where(np.abs(evecs[:, 226]) > 0.05)[0])\n",
     "igraph.plot(\n",
     "    sub_ig,\n",
     "    # layout=ig.layout_kamada_kawai(),\n",
@@ -2775,9 +2787,26 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
+    "sub_components = sub_ig.connected_components(mode=\"weak\")\n",
+    "\n",
+    "for c in sub_components:\n",
+    "    mat = nx.to_numpy_array(sub_ig.subgraph(c).to_networkx())\n",
+    "    print(mat.shape[0] - np.linalg.matrix_rank(mat))"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "cd9a90296a18fb94",
+   "execution_count": null
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "sub_sub_ig = sub_ig.induced_subgraph(sub_components[2])\n",
     "igraph.plot(\n",
-    "    ig,\n",
-    "    layout=ig.layout_kamada_kawai(),\n",
+    "    sub_sub_ig,\n",
+    "    layout=sub_sub_ig.layout_kamada_kawai(),\n",
     "    vertex_size=10,\n",
     "    # vertex_color=\"orange\",\n",
     "    edge_width=0.2,\n",
@@ -2795,16 +2824,29 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "sub_components = sub_ig.connected_components(mode=\"weak\")\n",
-    "\n",
-    "for c in sub_components:\n",
-    "    mat = nx.to_numpy_array(sub_ig.subgraph(c).to_networkx())\n",
-    "    print(mat.shape[0] - np.linalg.matrix_rank(mat))"
+    "net = nt.Network(filter_menu=True, select_menu=True, font_color=\"black\")\n",
+    "net.from_nx(sub_ig.subgraph(sub_components[2]).to_networkx())\n",
+    "for node in net.nodes:\n",
+    "    node[\"title\"] = str(node[\"id\"])\n",
+    "net.show_buttons(filter_=['nodes', 'edges', 'physics'])\n",
+    "net.write_html(\"nx.html\")"
    ],
    "metadata": {
     "collapsed": false
    },
-   "id": "cd9a90296a18fb94",
+   "id": "51d05e98f2165e8",
+   "execution_count": null
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "nx.write_gexf(sub_ig.subgraph(sub_components[2]).to_networkx(), \"data.gexf\")"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "fa3781aa80b64dd",
    "execution_count": null
   },
   {
