--- a/notebooks/pxp_model.ipynb
+++ b/notebooks/pxp_model.ipynb
@@ -15,7 +15,6 @@
    "source": [
     "from functools import reduce\n",
     "from itertools import product\n",
-    "from typing import List\n",
     "\n",
     "import igraph\n",
     "import matplotlib.colors as mcolors\n",
@@ -30,47 +29,10 @@
     "\n",
     "from qlinks.model.pxp_model_1d import fibonacci, PXPModel1D\n",
     "\n",
+    "from utils import format_custom_index, setup_igraph\n",
+    "\n",
     "np.set_printoptions(threshold=np.inf)\n",
     "pd.set_option(\"display.max_rows\", None)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "7c08c51af76d8a1",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-06-12T05:56:31.204332Z",
-     "start_time": "2024-06-12T05:56:31.194583Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "def format_custom_index(index):\n",
-    "    return [f\"({i}) {idx}\" for i, idx in enumerate(index)]\n",
-    "\n",
-    "\n",
-    "def characteristic_matrix(partitions):\n",
-    "    n_total_elems = sum(len(part) for part in partitions)\n",
-    "    n_partitions = len(partitions)\n",
-    "    char_mat = np.zeros((n_total_elems, n_partitions), dtype=int)\n",
-    "\n",
-    "    for j, partition in enumerate(partitions):\n",
-    "        for i in partition:\n",
-    "            char_mat[i][j] = 1\n",
-    "    return char_mat\n",
-    "\n",
-    "\n",
-    "def setup_igraph(nx_g, highlight: List[int] = None, highlight_color: List[str] = None):\n",
-    "    ig = igraph.Graph.from_networkx(nx_g)\n",
-    "    ig.vs[\"label\"] = [str(i) for i in range(ig.vcount())]\n",
-    "    color = [\"whitesmoke\" for _ in range(ig.vcount())]\n",
-    "    if highlight is not None:\n",
-    "        for i, nodes in enumerate(highlight):\n",
-    "            for node in nodes:\n",
-    "                color[node] = highlight_color[i]\n",
-    "        ig.vs[\"color\"] = color\n",
-    "    return ig"
    ]
   },
   {
@@ -1471,36 +1433,6 @@
     "    # edge_color=\"darkgray\",\n",
     "    vertex_label_size=10,\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "60cfc73309187f25",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-06-12T06:05:47.561952Z",
-     "start_time": "2024-06-12T06:05:47.556037Z"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "partition = perm_gp.orbits()\n",
-    "s = characteristic_matrix(partition) @ np.sqrt(np.diagflat([1/len(p) for p in partition]))\n",
-    "b = s.T @ nx.to_numpy_array(g) @ s\n",
-    "\n",
-    "np.allclose(nx.to_numpy_array(g) @ s, s @ b, atol=1e-12)"
    ]
   },
   {
